# eprihlaska

./: .gitignore  .gitmodules  README.md  config-sample.py  config.py  init_db.py  pyproject.toml  requirements.txt  run.py  wsgi.py
eprihlaska/: __init__.py  ais_utils.py  consts.py  forms.py  headless_pdfkit.py  models.py  renderer.py  template_filters.py  utils.py  validators.py  views.py
eprihlaska/data/: krajiny-osn.csv  obce.csv  odbory.csv  psc-obci-sr.csv  requirements.txt  rodinne-stavy.csv  skoly.csv  ss-odbor-map.csv  staty.csv  vzdelanie.csv
eprihlaska/static/js/: chosen-nonaccented.js  eprihlaska.js
eprihlaska/static/styles/: _chosen.scss  _flexbox-helpers.scss  _form.scss  _navbar.scss  _typography.scss  _variables.scss  main.css  main.css.map  main.scss
eprihlaska/templates/: address.html  admin_impersonate_list.html  admin_list.html  admin_process.html  admin_tokens_list.html  admission_waivers.html  admission_wavers.html  application_form.html  application_form_header.html  final.html  forgotten_password.html  further_personal_info.html  grade_listing.html  grade_listing_table.html  index.html  intro.html  login.html  personal_info.html  previous_studies.html  signup.html  social_buttons.html  study_programme.html  wtf.html
scripts/: README.md  ciselnik_obce_to_csv.py  ciselnik_to_csv.py  ciselniky-2024-01.xlsx  ciselniky-2025-12.xlsx  reset_db.py
translations/en/LC_MESSAGES/: messages.po
