[project]
name = "eprihlaska"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "asn1crypto==0.24.0",
  "authlib==1.6.5",
  "beautifulsoup4==4.6.0",
  "blinker==1.9.0",
  "bs4==0.0.1",
  "cairocffi==0.8.0",
  "cairosvg==2.7.0",
  "certifi==2024.12.14",
  "chardet==3.0.4",
  "cryptography==44.0.0",
  "cssselect2==0.2.1",
  "defusedxml==0.7.1",
  "dominate==2.9.1",
  "flask==3.1.1",
  "flask-babel==4.0.0",
  "flask-bootstrap==3.3.7.1",
  "flask-login==0.6.3",
  "flask-mail==0.9.1",
  "flask-nav3==0.7.2",
  "flask-session==0.8.0",
  "flask-sqlalchemy==3.1.1",
  "flask-weasyprint==0.5",
  "flask-wtf==1.2.2",
  "html5lib==1.0.1",
  "idna==3.10",
  "lxml==5.3.0",
  "markupsafe==2.1.3",
  "pdfkit==0.6.1",
  "pdfrw==0.4",
  "pillow==11.0.0",
  "pyasn1==0.4.2",
  "pycparser==2.18",
  "pyjwt==2.4.0",
  "pymysql==1.1.1",
  "pypdf2==1.27.9",
  "pyphen==0.9.4",
  "python-dateutil==2.9.0.post0",
  "requests==2.32.4",
  "six==1.17.0",
  "sqlalchemy==2.0.36",
  "tinycss2==0.6.1",
  "visitor==0.1.3",
  "weasyprint==0.42",
  "webencodings==0.5.1",
  "email-validator>=2.1.0.post1,<3",
  "werkzeug==3.1.4",
  "flask-reuploaded>=1.4.0,<2",
  "munch>=4.0.0,<5",
  "urllib3==2.6.0",
  "pypdftk>=0.5",
  "votr",
]

[tool.uv]
dev-dependencies = [
  "pandas>=2.2.3",
  "click>=8.1.8",
  "openpyxl>=3.1.5",
  "xlrd>=2.0.1",
]

[tool.uv.sources]
votr = { git = "https://github.com/fmfi-svt/votr.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
