[project]
name = "eprihlaska"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "authlib>=1.4.0",
  "dominate>=2.9.1",
  "flask>=3.1.0",
  "flask-babel>=4.0.0",
  "flask-bootstrap>=3.3.7.1",
  "flask-login>=0.6.3",
  "flask-mail>=0.9.1",
  "flask-nav3>=0.7.2",
  "flask-session>=0.8.0",
  "flask-sqlalchemy>=3.1.1",
  "flask-wtf>=1.2.2",
  "pdfkit>=0.6.1",
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.36",
  "flask-reuploaded>=1.4.0",
  "munch>=4.0.0",
  "urllib3>=2.6.3",
  "pypdftk>=0.5",
  "votr",
  "email-validator>=2.3.0",
]

[tool.uv]
dev-dependencies = [
  "pandas>=2.2.3",
  "click>=8.1.8",
  "openpyxl>=3.1.5",
  "xlrd>=2.0.1",
]

[tool.uv.sources]
votr = { git = "https://github.com/fmfi-svt/votr.git" }
